# Proiect_POO

./: .gitignore  CMakeLists.txt  Produs.cpp  Produs.h  README.md  lista_produse.csv  main.cpp  produs.in
Librarii/: Memorie.cpp  Memorie.h  PlacaBaza.cpp  PlacaBaza.h  PlacaVideo.cpp  PlacaVideo.h  Procesor.cpp  Procesor.h  Produs.cpp  Produs.h  Stocare.cpp  Stocare.h
diagrame/: clase.drawio  main.drawio
